--- a/Index.html
+++ b/Index.html
@@ -4,5 +4,6 @@
     <title>Test for GTIHUB MINI COURSE</title>
 </head>
 <body>
+    <img src="Pompam.jpg"/>
     <h2>Welcome to my website</h2>
 </body>
